subprojects/groovy-parser-antlr4/src/test/resources/fail/This_01x.groovy
class A {
    A(int a) {
        println a
        this()
    }

    A() {}
}